--- a/assets/css/5-layout/_index.scss
+++ b/assets/css/5-layout/_index.scss
@@ -6,3 +6,8 @@
 @import 'extends';
 @import 'home';
 @import 'product';
+@import 'dashboard';
+@import 'notices';
+@import 'login';
+@import 'breadcrumb';
+@import 'shop';
