--- a/assets/css/5-layout/_footer.scss
+++ b/assets/css/5-layout/_footer.scss
@@ -1,6 +1,7 @@
 .footer{
     border-top: 1px solid #eee;
     padding:50px 0 70px;
+    background: #fff;
     a, p{
         font-size:0.9rem;
     }
