--- a/assets/css/5-layout/_header.scss
+++ b/assets/css/5-layout/_header.scss
@@ -11,3 +11,55 @@
         height:auto;
     }
 }
+
+
+.navbar-dark .navbar-toggler{
+    border:none;
+}
+
+.navbar-dark .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar-dark .navbar-nav .nav-item .dropdown-menu{
+    .dropdown-item{
+        color: $black;
+        font-weight:$bold;
+        font-size:14px;
+        &:focus{
+            color: #fff;
+        }
+    }
+}
+
+.navbar-dark .navbar-nav .nav-link, .navbar-dark .navbar-nav .nav-item a {
+    font-weight: $semibold;
+    font-size: 15px;
+    display: block;
+    padding: 0.5rem 1rem;
+    color:rgba(255, 255, 255, 0.5);
+    &.cart-icon img{
+        width:20px;
+    }
+    &.search-icon img{
+        width:20px;
+    }
+}
+
+
+.dropdown-item{
+    font-weight: $semibold;
+    font-size: 15px;
+    &:active {
+        color: #fff;
+        text-decoration: none;
+        background-color: $primary;
+    }
+}
+
+@media (min-width: 992px){
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-right: 0.8rem;
+        padding-left: 0.8rem;
+    }
+}
