--- a/assets/css/5-layout/_header.scss
+++ b/assets/css/5-layout/_header.scss
@@ -57,6 +57,35 @@
     }
 }
 
+
+.search-icon{
+    position: absolute;
+    right: 82px;
+    top: 20px;
+    background: transparent;
+    border:none;
+    outline: none !important;
+}
+
+.search-input {
+    input[type='search']{
+        background: rgba(255, 255, 255, 0.2);
+        border: none;
+        color: #fff;
+    }
+    ::-webkit-input-placeholder { /* Edge */
+        color: rgba(255, 255, 255, 0.3);
+      }
+      
+      :-ms-input-placeholder { /* Internet Explorer 10-11 */
+        color: rgba(255, 255, 255, 0.3);
+      }
+      
+      ::placeholder {
+        color: rgba(255, 255, 255, 0.3);
+      }
+}
+
 .cart-icon {
     position: relative;
     .cart-quantity {
@@ -77,5 +106,15 @@
     .navbar-expand-lg .navbar-nav .nav-link {
         padding-right: 0.8rem;
         padding-left: 0.8rem;
+    }
+    .search-input {
+        input[type='search']{
+            padding-right: 55px;
+        }
+    }
+    .search-icon{
+        top:0;
+        right:0px;
+        padding:6px 10px;
     }
 }
