--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14659,6 +14659,36 @@ a {
     text-decoration: none;
     background-color: #4D437B; }
 
+.search-icon {
+  position: absolute;
+  right: 82px;
+  top: 20px;
+  background: transparent;
+  border: none;
+  outline: none !important; }
+
+.search-input input[type='search'] {
+  background: rgba(255, 255, 255, 0.2);
+  border: none;
+  color: #fff; }
+
+.search-input ::-webkit-input-placeholder {
+  /* Edge */
+  color: rgba(255, 255, 255, 0.3); }
+
+.search-input :-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: rgba(255, 255, 255, 0.3); }
+
+.search-input ::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.3); }
+
+.search-input ::-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.3); }
+
+.search-input ::placeholder {
+  color: rgba(255, 255, 255, 0.3); }
+
 .cart-icon {
   position: relative; }
   .cart-icon .cart-quantity {
@@ -14676,7 +14706,13 @@ a {
 @media (min-width: 992px) {
   .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 0.8rem;
-    padding-left: 0.8rem; } }
+    padding-left: 0.8rem; }
+  .search-input input[type='search'] {
+    padding-right: 55px; }
+  .search-icon {
+    top: 0;
+    right: 0px;
+    padding: 6px 10px; } }
 
 .footer {
   border-top: 1px solid #eee;
