--- a/assets/css/5-layout/_footer.scss
+++ b/assets/css/5-layout/_footer.scss
@@ -1,3 +1,9 @@
+.bottom-navbar{
+    height:50px;
+    .cart-icon{
+        width:25px;
+    }
+}
 .footer{
     border-top: 1px solid #eee;
     padding:50px 0 70px;
