--- a/assets/css/5-layout/_header.scss
+++ b/assets/css/5-layout/_header.scss
@@ -65,6 +65,9 @@
     background: transparent;
     border:none;
     outline: none !important;
+    img{
+        width:18px;
+    }
 }
 
 .search-input {
@@ -72,6 +75,7 @@
         background: rgba(255, 255, 255, 0.2);
         border: none;
         color: #fff;
+        font-size:0.9rem;
     }
     ::-webkit-input-placeholder { /* Edge */
         color: rgba(255, 255, 255, 0.3);
@@ -100,6 +104,13 @@
         border-radius: 50%;
         padding-top: 1px;
     }
+}
+
+.cart-price{
+    font-size: 0.8rem;
+    margin-left: 12px;
+    opacity: 1;
+    color: #fff;
 }
 
 @media (min-width: 992px){
